Schedules api documentation
